tests/error/func_code_error.gw
// [contains] in function 'test'
function void test() { <<<b>>>; }
